[package]
name = "background"
version = "1.0.0"
authors = ["Steven Berg <steven@stevenberg.net>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = { version = "0.4.19", features = ["serde"] }
directories = "4.0.1"
dirs = "4.0.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
