[package]
name = "background"
version = "1.0.0"
authors = ["Steven Berg <steven@stevenberg.net>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
directories = "5.0.1"
dirs = "5.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
ureq = "2.8.0"
